--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@madzadev/audio-player": "^2.1.14",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "idb": "^8.0.2",
+    "mitt": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "3.10.0-rc.1",
