--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "MMM",
     "description": "descriptiondescriptiondescription",
     "start_url": "/",
-    "display": "standalone",
+    "display": "fullscreen",
     "icons": [
         {
             "src": "/react.svg",
