--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "3.10.0-rc.1",
-    "wouter": "^3.5.1"
+    "wouter": "^3.5.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@rspack/cli": "^1.2.2",
