--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "3.10.0-rc.1",
     "wouter": "^3.5.1",
+    "wouter-search": "^1.3.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
