--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^6.4.2",
     "idb": "^8.0.2",
     "mitt": "^3.0.1",
+    "notistack": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "3.10.0-rc.1",
