--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "cross-env": "^7.0.3",
     "react-refresh": "^0.14.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2",
+    "worker-loader": "^3.0.8",
+    "worker-plugin": "^5.0.1"
   }
 }
