--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "axios": "^1.7.9",
     "idb": "^8.0.2",
     "mitt": "^3.0.1",
     "notistack": "^3.0.2",
